ECB2_Lib.Parser/ColorBasicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Stephen\source\repos\ECB2_Lib\ECB2_Lib.Parser.Grammar\ColorBasic.g4 by ANTLR 4.9.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace ECB2_Lib.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.3")]
[System.CLSCompliant(false)]
public partial class ColorBasicParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, LET=3, DIM=4, ABS=5, ASC=6, SGN=7, INT=8, SIN=9, RND=10, 
		LEN=11, VAL=12, CHR=13, MID=14, LEFT=15, RIGHT=16, STR=17, INKEY=18, JOYSTK=19, 
		EOFTOKEN=20, PEEK=21, POINT=22, MEM=23, USR=24, FOR=25, TO=26, STEP=27, 
		NEXT=28, IF=29, THEN=30, ELSE=31, GO=32, SUB=33, ON=34, OFF=35, RETURN=36, 
		DATA=37, RESTORE=38, READ=39, NEW=40, END=41, STOP=42, RUN=43, CONT=44, 
		LIST=45, LLIST=46, CLEAR=47, INPUT=48, PRINT=49, TAB=50, SET=51, RESET=52, 
		CLS=53, EXEC=54, POKE=55, MOTOR=56, AUDIO=57, SOUND=58, CLOAD=59, CSAVE=60, 
		CLOADM=61, CSAVEM=62, SKIPF=63, OPEN=64, CLOSE=65, COMMENT=66, REM=67, 
		DOLLAR=68, AT=69, PERCENT=70, ADD=71, SUBTRACT=72, MUL=73, DIV=74, GT=75, 
		LT=76, EQ=77, COMMA=78, SEMICOLON=79, COLON=80, EXP=81, HASH=82, OR=83, 
		AND=84, NOT=85, LPAREN=86, RPAREN=87, STRINGLITERAL=88, WS=89, DIGITS=90, 
		NUMBER=91, LETTERS=92, DATUM=93, SINGLE_DIGIT=94, DEVICE_CASSETTE=95, 
		DEVICE_PRINTER=96, DEVICE_KEYBOARD=97;
	public const int
		RULE_prog = 0, RULE_line = 1, RULE_linenumber = 2, RULE_statement = 3, 
		RULE_func_ = 4, RULE_number = 5, RULE_signExpression = 6, RULE_exponentExpression = 7, 
		RULE_multiplyingExpression = 8, RULE_addingExpression = 9, RULE_relationalExpression = 10, 
		RULE_expression = 11, RULE_relop = 12, RULE_neq = 13, RULE_gte = 14, RULE_lte = 15, 
		RULE_var_ = 16, RULE_varname = 17, RULE_varsuffix = 18, RULE_varlist = 19, 
		RULE_vardecl = 20, RULE_variableassignment = 21, RULE_exprlist = 22, RULE_datum = 23, 
		RULE_absfunc = 24, RULE_ascfunc = 25, RULE_sgnfunc = 26, RULE_intfunc = 27, 
		RULE_sinfunc = 28, RULE_rndfunc = 29, RULE_lenfunc = 30, RULE_valfunc = 31, 
		RULE_chrfunc = 32, RULE_midfunc = 33, RULE_leftfunc = 34, RULE_rightfunc = 35, 
		RULE_strfunc = 36, RULE_inkeyfunc = 37, RULE_joystkfunc = 38, RULE_eoffunc = 39, 
		RULE_peekfunc = 40, RULE_pointfunc = 41, RULE_memfunc = 42, RULE_usrfunc = 43, 
		RULE_letstmt = 44, RULE_dimstmt = 45, RULE_forstmt = 46, RULE_nextstmt = 47, 
		RULE_ifstmt1 = 48, RULE_ifstmt2 = 49, RULE_gotostmt = 50, RULE_gosubstmt = 51, 
		RULE_ongotostmt = 52, RULE_ongosubstmt = 53, RULE_returnstmt = 54, RULE_datastmt = 55, 
		RULE_readstmt = 56, RULE_restorestmt = 57, RULE_newstmt = 58, RULE_endstmt = 59, 
		RULE_stopstmt = 60, RULE_runstmt = 61, RULE_clearstmt = 62, RULE_contstmt = 63, 
		RULE_liststmt = 64, RULE_lliststmt = 65, RULE_inputstmt1 = 66, RULE_inputstmt2 = 67, 
		RULE_printstmt = 68, RULE_printtabstmt = 69, RULE_printhashstmt = 70, 
		RULE_printatstmt = 71, RULE_setstmt = 72, RULE_resetstmt = 73, RULE_clsstmt = 74, 
		RULE_execstmt = 75, RULE_pokestmt = 76, RULE_motorstmt = 77, RULE_audiostmt = 78, 
		RULE_soundstmt = 79, RULE_cloadstmt = 80, RULE_cloadmstmt = 81, RULE_csavestmt = 82, 
		RULE_csavemstmt = 83, RULE_skipfstmt = 84, RULE_openstmt = 85, RULE_closestmt = 86;
	public static readonly string[] ruleNames = {
		"prog", "line", "linenumber", "statement", "func_", "number", "signExpression", 
		"exponentExpression", "multiplyingExpression", "addingExpression", "relationalExpression", 
		"expression", "relop", "neq", "gte", "lte", "var_", "varname", "varsuffix", 
		"varlist", "vardecl", "variableassignment", "exprlist", "datum", "absfunc", 
		"ascfunc", "sgnfunc", "intfunc", "sinfunc", "rndfunc", "lenfunc", "valfunc", 
		"chrfunc", "midfunc", "leftfunc", "rightfunc", "strfunc", "inkeyfunc", 
		"joystkfunc", "eoffunc", "peekfunc", "pointfunc", "memfunc", "usrfunc", 
		"letstmt", "dimstmt", "forstmt", "nextstmt", "ifstmt1", "ifstmt2", "gotostmt", 
		"gosubstmt", "ongotostmt", "ongosubstmt", "returnstmt", "datastmt", "readstmt", 
		"restorestmt", "newstmt", "endstmt", "stopstmt", "runstmt", "clearstmt", 
		"contstmt", "liststmt", "lliststmt", "inputstmt1", "inputstmt2", "printstmt", 
		"printtabstmt", "printhashstmt", "printatstmt", "setstmt", "resetstmt", 
		"clsstmt", "execstmt", "pokestmt", "motorstmt", "audiostmt", "soundstmt", 
		"cloadstmt", "cloadmstmt", "csavestmt", "csavemstmt", "skipfstmt", "openstmt", 
		"closestmt"
	};

	private static readonly string[] _LiteralNames = {
		null, "'\"I\"'", "'\"O\"'", "'LET'", "'DIM'", "'ABS'", "'ASC'", "'SGN'", 
		"'INT'", "'SIN'", "'RND'", "'LEN'", "'VAL'", "'CHR$'", "'MID$'", "'LEFT$'", 
		"'RIGHT$'", "'STR$'", "'INKEY$'", "'JOYSTK'", "'EOF'", "'PEEK'", "'POINT'", 
		"'MEM'", "'USR'", "'FOR'", "'TO'", "'STEP'", "'NEXT'", "'IF'", "'THEN'", 
		"'ELSE'", "'GO'", "'SUB'", "'ON'", "'OFF'", "'RETURN'", "'DATA'", "'RESTORE'", 
		"'READ'", "'NEW'", "'END'", "'STOP'", "'RUN'", "'CONT'", "'LIST'", "'LLIST'", 
		"'CLEAR'", "'INPUT'", "'PRINT'", "'TAB'", "'SET'", "'RESET'", "'CLS'", 
		"'EXEC'", "'POKE'", "'MOTOR'", "'AUDIO'", "'SOUND'", "'CLOAD'", "'CSAVE'", 
		"'CLOADM'", "'CSAVEM'", "'SKIPF'", "'OPEN'", "'CLOSE'", null, null, "'$'", 
		"'@'", "'%'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", "'='", "','", 
		"';'", "':'", "'^'", "'#'", "'OR'", "'AND'", "'NOT'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "LET", "DIM", "ABS", "ASC", "SGN", "INT", "SIN", "RND", 
		"LEN", "VAL", "CHR", "MID", "LEFT", "RIGHT", "STR", "INKEY", "JOYSTK", 
		"EOFTOKEN", "PEEK", "POINT", "MEM", "USR", "FOR", "TO", "STEP", "NEXT", 
		"IF", "THEN", "ELSE", "GO", "SUB", "ON", "OFF", "RETURN", "DATA", "RESTORE", 
		"READ", "NEW", "END", "STOP", "RUN", "CONT", "LIST", "LLIST", "CLEAR", 
		"INPUT", "PRINT", "TAB", "SET", "RESET", "CLS", "EXEC", "POKE", "MOTOR", 
		"AUDIO", "SOUND", "CLOAD", "CSAVE", "CLOADM", "CSAVEM", "SKIPF", "OPEN", 
		"CLOSE", "COMMENT", "REM", "DOLLAR", "AT", "PERCENT", "ADD", "SUBTRACT", 
		"MUL", "DIV", "GT", "LT", "EQ", "COMMA", "SEMICOLON", "COLON", "EXP", 
		"HASH", "OR", "AND", "NOT", "LPAREN", "RPAREN", "STRINGLITERAL", "WS", 
		"DIGITS", "NUMBER", "LETTERS", "DATUM", "SINGLE_DIGIT", "DEVICE_CASSETTE", 
		"DEVICE_PRINTER", "DEVICE_KEYBOARD"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ColorBasic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ColorBasicParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ColorBasicParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ColorBasicParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ColorBasicParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IColorBasicVisitor<TResult> typedVisitor = visitor as IColorBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 175;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 174;
				line();
				}
				}
				State = 177;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==DIGITS );
			State = 179;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LinenumberContext linenumber() {
			return GetRuleContext<LinenumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMENT() { return GetTokens(ColorBasicParser.COMMENT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT(int i) {
			return GetToken(ColorBasicParser.COMMENT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COLON() { return GetTokens(ColorBasicParser.COLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON(int i) {
			return GetToken(ColorBasicParser.COLON, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IColorBasicVisitor<TResult> typedVisitor = visitor as IColorBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 181;
			linenumber();
			{
			State = 184;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LET:
			case DIM:
			case FOR:
			case NEXT:
			case IF:
			case GO:
			case RETURN:
			case DATA:
			case RESTORE:
			case READ:
			case NEW:
			case END:
			case STOP:
			case RUN:
			case CONT:
			case LIST:
			case LLIST:
			case CLEAR:
			case INPUT:
			case PRINT:
			case SET:
			case RESET:
			case CLS:
			case EXEC:
			case POKE:
			case MOTOR:
			case AUDIO:
			case SOUND:
			case CLOAD:
			case CSAVE:
			case CSAVEM:
			case SKIPF:
			case OPEN:
			case CLOSE:
			case LETTERS:
				{
				State = 182;
				statement();
				}
				break;
			case COMMENT:
				{
				State = 183;
				Match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 193;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COLON) {
				{
				{
				State = 186;
				Match(COLON);
				State = 189;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LET:
				case DIM:
				case FOR:
				case NEXT:
				case IF:
				case GO:
				case RETURN:
				case DATA:
				case RESTORE:
				case READ:
				case NEW:
				case END:
				case STOP:
				case RUN:
				case CONT:
				case LIST:
				case LLIST:
				case CLEAR:
				case INPUT:
				case PRINT:
				case SET:
				case RESET:
				case CLS:
				case EXEC:
				case POKE:
				case MOTOR:
				case AUDIO:
				case SOUND:
				case CLOAD:
				case CSAVE:
				case CSAVEM:
				case SKIPF:
				case OPEN:
				case CLOSE:
				case LETTERS:
					{
					State = 187;
					statement();
					}
					break;
				case COMMENT:
					{
					State = 188;
					Match(COMMENT);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				State = 195;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LinenumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGITS() { return GetToken(ColorBasicParser.DIGITS, 0); }
		public LinenumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_linenumber; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.EnterLinenumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IColorBasicListener typedListener = listener as IColorBasicListener;
			if (typedListener != null) typedListener.ExitLinenumber(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IColorBasicVisitor<TResult> typedVisitor = visitor as IColorBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLinenumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LinenumberContext linenumber() {
		LinenumberContext _localctx = new LinenumberContext(Context, State);
		EnterRule(_localctx, 4, RULE_linenumber);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 196;
			Match(DIGITS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
